errores solucionados y todo funcionando

--- a/html/noticias.html
+++ b/html/noticias.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registro</title>
+    <title>Document</title>
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/videojuego.css" />
+    <link rel="stylesheet" href="../css/videojuego.css" />
     <header>GamerVerse</header>
   </head>
   <body>
     <nav>
-      <a href="/html/inicio.html">Inicio</a>
-      <a href="/html/tienda.html">Tienda</a>
-      <a href="/html/noticias.html">Noticias</a>
-      <a href="/html/contactanos.html">Contacto</a>
-      <a href="/html/registro.html">Registro</a>
-      <a href="/html/inicioSesion.html">Inicio de sesión</a>
+      <a href="inicio.html">Inicio</a>
+      <a href="tienda.html">Tienda</a>
+      <a href="noticias.html">Noticias</a>
+      <a href="contactanos.html">Contacto</a>
+      <a href="registro.html">Registro</a>
+      <a href="inicioSesion.html">Inicio de sesión</a>
     </nav>
 
     <div class="container">
@@ -29,7 +29,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="/imagenes/nintendo.png"
+              src="../imagenes/nintendo.png"
               alt="nintendo"
             />
             <div class="card-body">
@@ -37,7 +37,7 @@
               <p class="card-text">
                 Nintendo Switch 2 podría llegar a las tiendas en mayo o junio
               </p>
-              <a href="/html/noticiaUno.html" class="btn btn-secondary mt-2"
+              <a href="../noticiaUno.html" class="btn btn-secondary mt-2"
                 >Ver más</a
               >
             </div>
@@ -47,7 +47,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="/imagenes/silent.png"
+              src="../imagenes/silent.png"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -63,7 +63,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="/imagenes/assassin.png"
+              src="../imagenes/assassin.png"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -84,7 +84,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="/imagenes/steam.png"
+              src="../imagenes/steam.png"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -104,7 +104,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="/imagenes/wordle.png"
+              src="../imagenes/wordle.png"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -124,7 +124,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="/imagenes/gta.png"
+              src="../imagenes/gta.png"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -144,7 +144,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="/imagenes/pokemon.png"
+              src="../imagenes/pokemon.png"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -164,7 +164,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="/imagenes/mario.png"
+              src="../imagenes/mario.png"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -185,7 +185,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="/imagenes/tekken.png"
+              src="../imagenes/tekken.png"
               alt="Card image cap"
             />
             <div class="card-body">
