--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -9,18 +9,18 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/videojuego.css" />
+    <link rel="stylesheet" href="../css/videojuego.css" />
     <header>GamerVerse</header>
   </head>
   <body>
     <!-- menú -->
     <nav>
-      <a href="/html/inicio.html">Inicio</a>
-      <a href="/html/tienda.html">Tienda</a>
-      <a href="/html/noticias.html">Noticias</a>
-      <a href="/html/contactanos.html">Contacto</a>
-      <a href="/html/registro.html">Registro</a>
-      <a href="/html/inicioSesion.html">Inicio de sesión</a>
+      <a href="inicio.html">Inicio</a>
+      <a href="tienda.html">Tienda</a>
+      <a href="noticias.html">Noticias</a>
+      <a href="contactanos.html">Contacto</a>
+      <a href="registro.html">Registro</a>
+      <a href="inicioSesion.html">Inicio de sesión</a>
     </nav>
 
     <h3>Si tienes alguna sugerencia, no dudes en contactarnos</h3>
