--- a/html/inicio.html
+++ b/html/inicio.html
@@ -4,43 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/videojuego.css" />
+    <link rel="stylesheet" href="../css/videojuego.css" />
   </head>
   <body>
     <header>GamerVerse</header>
     <!-- menú -->
     <nav>
-      <a href="/html/inicio.html">Inicio</a>
-      <a href="/html/tienda.html">Tienda</a>
-      <a href="/html/noticias.html">Noticias</a>
-      <a href="/html/contactanos.html">Contacto</a>
-      <a href="/html/registro.html">Registro</a>
-      <a href="/html/inicioSesion.html">Inicio de sesión</a>
+      <a href="inicio.html">Inicio</a>
+      <a href="tienda.html">Tienda</a>
+      <a href="noticias.html">Noticias</a>
+      <a href="contactanos.html">Contacto</a>
+      <a href="registro.html">Registro</a>
+      <a href="inicioSesion.html">Inicio de sesión</a>
     </nav>
     <!-- tarjetas con tres imagenes -->
     <h3>¡Compra por género!</h3>
     <div class="content">
       <div class="tarjetas">
-        <img src="/imagenes/uncharted.jpg" alt="accion" />
-        <a href="/html/tienda.html"><button type="button">Acción</button></a>
+        <img src="../imagenes/uncharted.jpg" alt="accion" />
+        <a href="tienda.html"><button type="button">Acción</button></a>
       </div>
       <div class="tarjetas">
-        <img src="/imagenes/way.png" alt="aventura" />
-        <a href="/html/tienda.html"><button type="button">Aventura</button></a>
+        <img src="../imagenes/aventura.jpg" alt="aventura" />
+        <a href="tienda.html"><button type="button">Aventura</button></a>
       </div>
       <div class="tarjetas">
-        <img src="/imagenes/empires.jpg" alt="estrategia" />
-        <a href="/html/tienda.html"
-          ><button type="button">Estrategia</button></a
-        >
+        <img src="../imagenes/civi.jpg" alt="estrategia" />
+        <a href="tienda.html"><button type="button">Estrategia</button></a>
       </div>
       <div class="tarjetas">
-        <img src="/imagenes/portadaSilent.jpg" alt="terror" />
-        <a href="/html/tienda.html"><button type="button">Terror</button></a>
+        <img src="../imagenes/portadaSilent.jpg" alt="terror" />
+        <a href="tienda.html"><button type="button">Terror</button></a>
       </div>
       <div class="tarjetas">
-        <img src="/imagenes/eaPortada.png" alt="deportes" />
-        <a href="/html/tienda.html"><button type="button">Deportes</button></a>
+        <img src="../imagenes/eaPortada.png" alt="deportes" />
+        <a href="tienda.html"><button type="button">Deportes</button></a>
       </div>
     </div>
     <!-- footer con derechos reservados -->
