--- a/html/noticiaDos.html
+++ b/html/noticiaDos.html
@@ -6,18 +6,18 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Document</title>
-      <link rel="stylesheet" href="/css/videojuego.css" />
+      <link rel="stylesheet" href="../css/videojuego.css" />
       <header>GamerVerse</header>
     </head>
     <body>
       <!--menú -->
       <nav>
-        <a href="/html/inicio.html">Inicio</a>
-        <a href="/html/tienda.html">Tienda</a>
-        <a href="/html/noticias.html">Noticias</a>
-        <a href="/html/contactanos.html">Contacto</a>
-        <a href="/html/registro.html">Registro</a>
-        <a href="/html/inicioSesion.html">Inicio de sesión</a>
+        <a href="inicio.html">Inicio</a>
+        <a href="tienda.html">Tienda</a>
+        <a href="noticias.html">Noticias</a>
+        <a href="contactanos.html">Contacto</a>
+        <a href="registro.html">Registro</a>
+        <a href="inicioSesion.html">Inicio de sesión</a>
       </nav>
       <!--contenido de los articulos -->
       <div class="contenido">
@@ -54,7 +54,7 @@
 
             <!-- primera imagen -->
             <figure class="article-image">
-              <img src="imagenes/silent1.png" alt="silent" />
+              <img src="../imagenes/uncharted.jpg" alt="silent" />
               <figcaption>Imagen del videojuego Silen Hill</figcaption>
             </figure>
 
