realizado login y registro

--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/videojuego.css" />
-    <header>GamerVerse</header>
   </head>
   <body>
     <!-- menú -->
@@ -19,8 +18,8 @@
       <a href="tienda.html">Tienda</a>
       <a href="noticias.html">Noticias</a>
       <a href="contactanos.html">Contacto</a>
-      <a href="registro.html">Registro</a>
-      <a href="inicioSesion.html">Inicio de sesión</a>
+      <a href="registro.php">Registro</a>
+      <a href="inicioSesion.php">Inicio de sesión</a>
     </nav>
 
     <h3>Si tienes alguna sugerencia, no dudes en contactarnos</h3>
