--- a/html/inicio.html
+++ b/html/inicio.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../css/videojuego.css" />
+    <link rel="stylesheet" href="../css/noticias.css" />
   </head>
+
   <body>
-    <header>GamerVerse</header>
+    <header>
+      <h1>GameVerse</h1>
+
+      <a href="/controller/logout.php">Cerrar sesión</a>
+    </header>
     <!-- menú -->
     <nav>
       <a href="inicio.html">Inicio</a>
