--- a/html/noticiaDos.html
+++ b/html/noticiaDos.html
@@ -7,7 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Document</title>
       <link rel="stylesheet" href="../css/videojuego.css" />
-      <header>GamerVerse</header>
+      <link rel="stylesheet" href="../css/noticias.css" />
     </head>
     <body>
       <!--menú -->
@@ -16,8 +16,8 @@
         <a href="tienda.html">Tienda</a>
         <a href="noticias.html">Noticias</a>
         <a href="contactanos.html">Contacto</a>
-        <a href="registro.html">Registro</a>
-        <a href="inicioSesion.html">Inicio de sesión</a>
+        <a href="registro.php">Registro</a>
+        <a href="inicioSesion.php">Inicio de sesión</a>
       </nav>
       <!--contenido de los articulos -->
       <div class="contenido">
@@ -54,8 +54,8 @@
 
             <!-- primera imagen -->
             <figure class="article-image">
-              <img src="../imagenes/uncharted.jpg" alt="silent" />
-              <figcaption>Imagen del videojuego Silen Hill</figcaption>
+              <img src="../imagenes/silent.png" alt="silent" />
+              <figcaption>Imagen del videojuego Silent Hill</figcaption>
             </figure>
 
             <p>
@@ -75,7 +75,7 @@
 
             <!-- segunda imagen -->
             <figure class="article-image">
-              <img src="imagenes/silent2.png" alt="silent hill" />
+              <img src="../imagenes/silent1.png" alt="silent hill" />
               <figcaption>Imagen del videojuego Silent Hill</figcaption>
             </figure>
 
