--- a/html/noticiaUno.html
+++ b/html/noticiaUno.html
@@ -7,7 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Document</title>
       <link rel="stylesheet" href="../css/videojuego.css" />
-      <header>GamerVerse</header>
+      <link rel="stylesheet" href="../css/noticias.css" />
     </head>
     <body>
       <!--menú -->
@@ -16,8 +16,8 @@
         <a href="tienda.html">Tienda</a>
         <a href="noticias.html">Noticias</a>
         <a href="contactanos.html">Contacto</a>
-        <a href="registro.html">Registro</a>
-        <a href="inicioSesion.html">Inicio de sesión</a>
+        <a href="registro.php">Registro</a>
+        <a href="inicioSesion.php">Inicio de sesión</a>
       </nav>
       <!--contenido del articulo-->
       <div class="contenido">
@@ -48,7 +48,7 @@
 
             <!-- primera imagen -->
             <figure class="article-image">
-              <img src="/imagenes/nintendo1.jpg" alt="nintendo switch 2" />
+              <img src="../imagenes/nintendo1.png" alt="nintendo switch 2" />
               <figcaption>Imagen de la Nintendo Switch</figcaption>
             </figure>
 
@@ -66,7 +66,7 @@
 
             <!-- segunda imagen-->
             <figure class="article-image">
-              <img src="/imagenes/nintendo2.png" alt="nintendo switch 2" />
+              <img src="../imagenes/nintendo2.png" alt="nintendo switch 2" />
               <figcaption>
                 Imagen de la presentación de la Nintendo Switch 2
               </figcaption>
