--- a/html/noticias.html
+++ b/html/noticias.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/videojuego.css" />
+    <link rel="stylesheet" href="../css/noticias.css" />
     <header>GamerVerse</header>
   </head>
   <body>
@@ -18,8 +19,8 @@
       <a href="tienda.html">Tienda</a>
       <a href="noticias.html">Noticias</a>
       <a href="contactanos.html">Contacto</a>
-      <a href="registro.html">Registro</a>
-      <a href="inicioSesion.html">Inicio de sesión</a>
+      <a href="registro.php">Registro</a>
+      <a href="inicioSesion.php">Inicio de sesión</a>
     </nav>
 
     <div class="container">
@@ -37,7 +38,7 @@
               <p class="card-text">
                 Nintendo Switch 2 podría llegar a las tiendas en mayo o junio
               </p>
-              <a href="../noticiaUno.html" class="btn btn-secondary mt-2"
+              <a href="./noticiaUno.html" class="btn btn-secondary mt-2"
                 >Ver más</a
               >
             </div>
@@ -53,7 +54,7 @@
             <div class="card-body">
               <h5 class="card-title">Noticias sobre Silent Hill</h5>
               <p class="card-text">Silent Hill es prohibido en este país.</p>
-              <a href="/htmlnoticiaDos.html" class="btn btn-secondary mt-2"
+              <a href="./noticiaDos.html" class="btn btn-secondary mt-2"
                 >Ver más</a
               >
             </div>
