--- a/html/registro.html
+++ b/html/registro.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/videojuego.css" />
-    <script src="registro.js" defer></script>
+    <script src="../registro/registro.js" defer></script>
     <header>GamerVerse</header>
   </head>
   <body>
@@ -25,7 +25,7 @@
     </nav>
 
     <div>
-      <form id="registroForm">
+      <form id="registerForm">
         <div class="mb-3 mt-4 col-sm-5 mx-3">
           <!-- nombre -->
           <div class="col-12">
@@ -46,13 +46,6 @@
               id="password"
               required
             />
-          </div>
-          <!-- Aceptación de términos -->
-          <div class="col-12">
-            <label>
-              <input type="checkbox" id="terminos" name="terminos" required />
-              He leído y acepto los términos y condiciones
-            </label>
           </div>
           <!-- botones -->
           <div class="col-12 mt-3">
