--- a/html/tienda.html
+++ b/html/tienda.html
@@ -10,9 +10,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/videojuego.css" />
+    <link rel="stylesheet" href="../css/noticias.css" />
     <script src="../tienda/carrito.js" defer></script>
-
-    <header>GamerVerse</header>
   </head>
   <body>
     <!-- menú -->
@@ -21,8 +20,8 @@
       <a href="tienda.html">Tienda</a>
       <a href="noticias.html">Noticias</a>
       <a href="contactanos.html">Contacto</a>
-      <a href="registro.html">Registro</a>
-      <a href="inicioSesion.html">Inicio de sesión</a>
+      <a href="registro.php">Registro</a>
+      <a href="inicioSesion.php">Inicio de sesión</a>
     </nav>
     <h1>Tienda</h1>
     <!-- productos de la tienda -->
