--- a/html/inicioSesion.html
+++ b/html/inicioSesion.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/videojuego.css" />
-    <script src="../registro/login.js" defer></script>
+    <script src="../usuario/login.js" defer></script>
   </head>
 
   <body>
@@ -52,7 +52,6 @@
         <!-- botones -->
         <div class="col-12 mt-3">
           <button type="submit" class="btn btn-success">Iniciar sesión</button>
-          <!--<a href="/css/videojuego.css" class="btn btn-secondary">Cancelar</a>-->
         </div>
       </form>
     </div>
