--- a/html/paginaTres.html
+++ b/html/paginaTres.html
@@ -23,8 +23,12 @@
       <a href="tienda.html">Tienda</a>
       <a href="noticias.html">Noticias</a>
       <a href="contactanos.html">Contacto</a>
-      <a href="registro.html">Registro</a>
-      <a href="inicioSesion.html">Inicio de sesión</a>
+      <span id="authLinks">
+        <!-- permitimos que el usuario pueda registrarse
+       o iniciar sesion -->
+        <a href="registro.html">Registro</a>
+        <a href="inicioSesion.html">Inicio de sesión</a>
+      </span>
     </nav>
 
     <div class="container">
@@ -34,13 +38,14 @@
           <div class="card m-2" style="width: 18rem">
             <img
               class="card-img-top"
-              src="../imagenes/nintendo.png"
+              src="../imagenes/nintendoSwitch.png"
               alt="nintendo"
             />
             <div class="card-body">
               <h5 class="card-title">Noticias sobre Nintendo Switch 2</h5>
               <p class="card-text">
-                Nintendo Switch 2 podría llegar a las tiendas en mayo o junio
+                ¿Cuándo se podrá reservar Nintendo Switch 2? Se filtra la
+                posible fecha
               </p>
               <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
             </div>
@@ -50,12 +55,14 @@
           <div class="card m-2" style="width: 18rem">
             <img
               class="card-img-top"
-              src="../imagenes/silent.png"
+              src="../imagenes/hogwarts.png"
               alt="Silent Hill"
             />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre Silent Hill</h5>
-              <p class="card-text">Silent Hill es prohibido en este país.</p>
+              <h5 class="card-title">Noticias sobre Warner Bros Games</h5>
+              <p class="card-text">
+                Warner Bros Games cancela la expansión de Hogwarts Legacy
+              </p>
               <a href="./noticiaDos.html" class="btn btn-secondary">Ver más</a>
             </div>
           </div>
@@ -64,31 +71,35 @@
           <div class="card m-2" style="width: 18rem">
             <img
               class="card-img-top"
-              src="../imagenes/assassin.png"
+              src="../imagenes/patapon.png"
               alt="Assassin's Creed"
             />
             <div class="card-body">
-              <h5 class="card-title">
-                Noticias sobre Assassin’s Creed Shadows
-              </h5>
+              <h5 class="card-title">Noticias sobre Patapon</h5>
               <p class="card-text">
-                Assassin’s Creed Shadows hace historia para la franquicia y
-                rompe un récord en Steam.
+                Los juegos de ritmo Patapon 1 y 2 llegarán el 11 de julio a PS5,
+                Switch y PC
               </p>
               <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
             </div>
           </div>
 
-          <!--cuarta tarjeta -->
+          <!-- cuarta tarjeta -->
           <div class="card m-2" style="width: 18rem">
-            <img class="card-img-top" src="../imagenes/steam.png" alt="Steam" />
+            <img
+              class="card-img-top"
+              src="../imagenes/marvel.png"
+              alt="Steam"
+            />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre Steam</h5>
+              <h5 class="card-title">Noticias sobre Marvel Cosmic Invasion</h5>
               <p class="card-text">
-                Jugadores alertan sobre un shooter con malware en Steam. Valve
-                ya lo retiró.
+                Presentado Marvel Cosmic Invasion, un beat 'em up con 15 héroes
+                jugables
               </p>
-              <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
+              <a href="./noticiaUno.html" class="btn btn-secondary"
+                >Ver más</a
+              >
             </div>
           </div>
 
@@ -96,53 +107,73 @@
           <div class="card m-2" style="width: 18rem">
             <img
               class="card-img-top"
-              src="../imagenes/wordle.png"
+              src="../imagenes/xboxUno.png"
               alt="Wordle"
             />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre Wordle</h5>
+              <h5 class="card-title">Noticias sobre Xbox</h5>
               <p class="card-text">
-                Trucos y soluciones para la palabra del día en Wordle en
-                español.
+                Xbox detalla las novedades de la actualización de marzo y Game
+                Pass amplía los juegos free-to-play con beneficios
               </p>
-              <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
+              <a href="./noticiaUno.html"" class="btn btn-secondary"
+                >Ver más</a
+              >
             </div>
           </div>
 
           <!--sexta tarjeta -->
           <div class="card m-2" style="width: 18rem">
-            <img class="card-img-top" src="../imagenes/gta.png" alt="GTA VI" />
+            <img
+              class="card-img-top"
+              src="../imagenes/wonder.png"
+              alt="GTA VI"
+            />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre GTA VI</h5>
+              <h5 class="card-title">Noticias sobre Nintendo</h5>
               <p class="card-text">
-                Retraso de GTA VI sería catastrófico para algunos estudios,
-                según analistas.
+                Nintendo presenta las tarjetas de juego virtuales, una función
+                para gestionar, mover y prestar juegos digitales
               </p>
-              <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
+              <a href="./noticiaUno.html" class="btn btn-secondary"
+                >Ver más</a
+              >
             </div>
           </div>
-          <!--septima tarjeta -->
+          <!-- septima tarjeta -->
           <div class="card m-2" style="width: 18rem">
-            <img class="card-img-top" src="../imagenes/gta.png" alt="GTA VI" />
+            <img
+              class="card-img-top"
+              src="../imagenes/tomodachi.png"
+              alt="GTA VI"
+            />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre GTA VI</h5>
+              <h5 class="card-title">Noticias sobre Tomodachi Life</h5>
               <p class="card-text">
-                Retraso de GTA VI sería catastrófico para algunos estudios,
-                según analistas.
+                Anunciada una secuela de Tomodachi Life, que llegará el próximo
+                año a Switch
               </p>
-              <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
+              <a href="./noticiaUno.html" class="btn btn-secondary"
+                >Ver más</a
+              >
             </div>
           </div>
           <!-- octava tarjeta -->
           <div class="card m-2" style="width: 18rem">
-            <img class="card-img-top" src="../imagenes/gta.png" alt="GTA VI" />
+            <img
+              class="card-img-top"
+              src="../imagenes/fatal.png"
+              alt="GTA VI"
+            />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre GTA VI</h5>
+              <h5 class="card-title">Noticias sobre Fatal Fury</h5>
               <p class="card-text">
-                Retraso de GTA VI sería catastrófico para algunos estudios,
-                según analistas.
+                Cristiano Ronaldo será uno de los luchadores de Fatal Fury: City
+                of the Wolves
               </p>
-              <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
+              <a href="./noticiaUno.html"class="btn btn-secondary"
+                >Ver más</a
+              >
             </div>
           </div>
         </div>
@@ -153,25 +184,15 @@
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-center mt-4">
         <li class="page-item disabled">
-          <a
-            class="page-link"
-            href="paginaUno.html"
-            tabindex="-1"
-            aria-disabled="true"
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="true"
             >Anterior</a
           >
         </li>
-        <li class="page-item active">
-          <a class="page-link" href="paginaUno.html">1</a>
-        </li>
+        <li class="page-item active"><a class="page-link" href="">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
         <li class="page-item">
-          <a class="page-link" href="paginaDos.html">2</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="paginaTres.html">3</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="paginaDos.html">Siguiente</a>
+          <a class="page-link" href="#">Siguiente</a>
         </li>
       </ul>
     </nav>
