--- a/html/noticiaDos.html
+++ b/html/noticiaDos.html
@@ -16,8 +16,12 @@
         <a href="tienda.html">Tienda</a>
         <a href="noticias.html">Noticias</a>
         <a href="contactanos.html">Contacto</a>
-        <a href="registro.php">Registro</a>
-        <a href="inicioSesion.php">Inicio de sesión</a>
+        <span id="authLinks">
+          <!-- permitimos que el usuario pueda registrarse
+         o iniciar sesion -->
+          <a href="registro.html">Registro</a>
+          <a href="inicioSesion.html">Inicio de sesión</a>
+        </span>
       </nav>
       <!--contenido de los articulos -->
       <div class="contenido">
