--- a/html/noticiaUno.html
+++ b/html/noticiaUno.html
@@ -10,14 +10,18 @@
       <link rel="stylesheet" href="../css/noticias.css" />
     </head>
     <body>
-      <!--menú -->
+      <!-- menú -->
       <nav>
         <a href="inicio.html">Inicio</a>
         <a href="tienda.html">Tienda</a>
         <a href="noticias.html">Noticias</a>
         <a href="contactanos.html">Contacto</a>
-        <a href="registro.php">Registro</a>
-        <a href="inicioSesion.php">Inicio de sesión</a>
+        <span id="authLinks">
+          <!-- permitimos que el usuario pueda registrarse
+         o iniciar sesion -->
+          <a href="registro.html">Registro</a>
+          <a href="inicioSesion.html">Inicio de sesión</a>
+        </span>
       </nav>
       <!--contenido del articulo-->
       <div class="contenido">
