--- a/html/paginaDos.html
+++ b/html/paginaDos.html
@@ -23,8 +23,12 @@
       <a href="tienda.html">Tienda</a>
       <a href="noticias.html">Noticias</a>
       <a href="contactanos.html">Contacto</a>
-      <a href="registro.html">Registro</a>
-      <a href="inicioSesion.html">Inicio de sesión</a>
+      <span id="authLinks">
+        <!-- permitimos que el usuario pueda registrarse
+           o iniciar sesion -->
+        <a href="registro.html">Registro</a>
+        <a href="inicioSesion.html">Inicio de sesión</a>
+      </span>
     </nav>
 
     <div class="container">
@@ -34,13 +38,16 @@
           <div class="card m-2" style="width: 18rem">
             <img
               class="card-img-top"
-              src="../imagenes/nintendo.png"
+              src="../imagenes/shadow.png"
               alt="nintendo"
             />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre Nintendo Switch 2</h5>
+              <h5 class="card-title">
+                Noticias sobre Assassin's Creed Shadows
+              </h5>
               <p class="card-text">
-                Nintendo Switch 2 podría llegar a las tiendas en mayo o junio
+                Los fans de Assassin's Creed Shadows tienen claro qué mejoras y
+                funciones añadirían
               </p>
               <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
             </div>
@@ -50,12 +57,15 @@
           <div class="card m-2" style="width: 18rem">
             <img
               class="card-img-top"
-              src="../imagenes/silent.png"
+              src="../imagenes/gamepass.png"
               alt="Silent Hill"
             />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre Silent Hill</h5>
-              <p class="card-text">Silent Hill es prohibido en este país.</p>
+              <h5 class="card-title">Noticias sobre Game Pass</h5>
+              <p class="card-text">
+                Si eres suscriptor de Game Pass a partir de ahora recibirás
+                nuevas ventajas interesantes.
+              </p>
               <a href="./noticiaDos.html" class="btn btn-secondary">Ver más</a>
             </div>
           </div>
@@ -64,16 +74,14 @@
           <div class="card m-2" style="width: 18rem">
             <img
               class="card-img-top"
-              src="../imagenes/assassin.png"
+              src="../imagenes/consolasamazon.png"
               alt="Assassin's Creed"
             />
             <div class="card-body">
-              <h5 class="card-title">
-                Noticias sobre Assassin’s Creed Shadows
-              </h5>
+              <h5 class="card-title">Noticias sobre consolas</h5>
               <p class="card-text">
-                Assassin’s Creed Shadows hace historia para la franquicia y
-                rompe un récord en Steam.
+                Amazon va a por las consolas: este pack para jugar en la nube
+                tiene todo lo necesario, y por 67 euros
               </p>
               <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
             </div>
@@ -81,12 +89,16 @@
 
           <!--cuarta tarjeta -->
           <div class="card m-2" style="width: 18rem">
-            <img class="card-img-top" src="../imagenes/steam.png" alt="Steam" />
+            <img
+              class="card-img-top"
+              src="../imagenes/precint.png"
+              alt="Steam"
+            />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre Steam</h5>
+              <h5 class="card-title">Noticias sobre The Precinct</h5>
               <p class="card-text">
-                Jugadores alertan sobre un shooter con malware en Steam. Valve
-                ya lo retiró.
+                The Precinct, el prometedor "GTA con policías" ya tiene fecha de
+                lanzamiento
               </p>
               <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
             </div>
@@ -96,14 +108,16 @@
           <div class="card m-2" style="width: 18rem">
             <img
               class="card-img-top"
-              src="../imagenes/wordle.png"
+              src="../imagenes/shadowUno.png"
               alt="Wordle"
             />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre Wordle</h5>
+              <h5 class="card-title">
+                Noticias sobre Assassin's Creed Shadows
+              </h5>
               <p class="card-text">
-                Trucos y soluciones para la palabra del día en Wordle en
-                español.
+                El error que debes evitar cometer en la forja de Assassin's
+                Creed Shadows al subir de nivel tus armas
               </p>
               <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
             </div>
@@ -111,36 +125,39 @@
 
           <!--sexta tarjeta -->
           <div class="card m-2" style="width: 18rem">
-            <img class="card-img-top" src="../imagenes/gta.png" alt="GTA VI" />
+            <img class="card-img-top" src="../imagenes/xbox.png" alt="GTA VI" />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre GTA VI</h5>
+              <h5 class="card-title">Noticias sobre XBOX</h5>
               <p class="card-text">
-                Retraso de GTA VI sería catastrófico para algunos estudios,
-                según analistas.
+                Lo más probable es que tengamos Xbox portátil este año
               </p>
               <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
             </div>
           </div>
           <!--septima tarjeta -->
           <div class="card m-2" style="width: 18rem">
-            <img class="card-img-top" src="../imagenes/gta.png" alt="GTA VI" />
+            <img class="card-img-top" src="../imagenes/lego.png" alt="GTA VI" />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre GTA VI</h5>
+              <h5 class="card-title">Noticias sobre LEGO</h5>
               <p class="card-text">
-                Retraso de GTA VI sería catastrófico para algunos estudios,
-                según analistas.
+                LEGO es un imperio del juguete y ya ha hecho sus incursiones en
+                el cine. Ahora se plantea el siguiente nivel: videojuegos
               </p>
               <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
             </div>
           </div>
           <!-- octava tarjeta -->
           <div class="card m-2" style="width: 18rem">
-            <img class="card-img-top" src="../imagenes/gta.png" alt="GTA VI" />
+            <img
+              class="card-img-top"
+              src="../imagenes/parejas.png"
+              alt="GTA VI"
+            />
             <div class="card-body">
-              <h5 class="card-title">Noticias sobre GTA VI</h5>
+              <h5 class="card-title">Noticias sobre juegos</h5>
               <p class="card-text">
-                Retraso de GTA VI sería catastrófico para algunos estudios,
-                según analistas.
+                La industria del videojuego parece tener claro dónde está su
+                siguiente boom: en los juegos "para parejas"
               </p>
               <a href="./noticiaUno.html" class="btn btn-secondary">Ver más</a>
             </div>
@@ -153,25 +170,15 @@
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-center mt-4">
         <li class="page-item disabled">
-          <a
-            class="page-link"
-            href="paginaUno.html"
-            tabindex="-1"
-            aria-disabled="true"
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="true"
             >Anterior</a
           >
         </li>
-        <li class="page-item active">
-          <a class="page-link" href="paginaUno.html">1</a>
-        </li>
+        <li class="page-item active"><a class="page-link" href="">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
         <li class="page-item">
-          <a class="page-link" href="paginaDos.html">2</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="paginaTres.html">3</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="paginaDos.html">Siguiente</a>
+          <a class="page-link" href="#">Siguiente</a>
         </li>
       </ul>
     </nav>
