solucionado error banner en noticias

--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/videojuego.css" />
   </head>
   <body>
+    <header></header>
     <!-- menú -->
 
     <nav>
@@ -39,6 +40,11 @@
         <div class="col-12">
           <label for="password" class="form-label d-block">Contraseña</label>
           <input type="password" class="form-control" id="password" />
+        </div>
+        <!--mensaje-->
+        <div class="col-12">
+          <label for="textarea" class="form-label">Mensaje</label>
+          <textarea class="form-control" id="mensaje" name="mensaje"></textarea>
         </div>
         <!-- botones -->
         <div class="col-12 mt-3">
