--- a/html/inicioSesion.html
+++ b/html/inicioSesion.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="../css/videojuego.css" />
     <script src="../usuario/login.js" defer></script>
   </head>
-
   <body>
+    <body>
+      <header></header>
     <!-- menú -->
     <nav>
       <a href="inicio.html">Inicio</a>
