--- a/html/noticiaDos.html
+++ b/html/noticiaDos.html
@@ -10,6 +10,7 @@
       <link rel="stylesheet" href="../css/noticias.css" />
     </head>
     <body>
+      <header></header>
       <!-- menú -->
       <nav>
         <a href="inicio.html">Inicio</a>
