--- a/html/registro.html
+++ b/html/registro.html
@@ -11,9 +11,9 @@
     />
     <link rel="stylesheet" href="../css/videojuego.css" />
     <script src="../registro/registro.js" defer></script>
-    <header>GamerVerse</header>
   </head>
   <body>
+    <header></header>
     <!-- menú -->
     <nav>
       <a href="inicio.html">Inicio</a>
@@ -30,7 +30,7 @@
 
     <div>
       <form id="registerForm">
-        <div class="mb-3 mt-4 col-sm-5 mx-3">
+        <div class="container mt-4">
           <!-- nombre -->
           <div class="col-12">
             <label for="nombre" class="form-label d-block">Nombre</label>
