--- a/html/tienda.html
+++ b/html/tienda.html
@@ -16,6 +16,7 @@
     <script src="../tienda/carrito.js" defer></script>
   </head>
   <body>
+    <header></header>
     <!-- menú -->
     <nav>
       <a href="inicio.html">Inicio</a>
