--- a/html/noticias.html
+++ b/html/noticias.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -13,9 +14,7 @@
     <link rel="stylesheet" href="../css/noticias.css" />
   </head>
   <body>
-    <header class="text-center py-3 bg-dark text-white">
-      <h1>GamerVerse</h1>
-    </header>
+    <header class="text-center py-3 bg-dark text-white"></header>
 
     <!-- menú -->
     <nav>
