--- a/html/paginaUno.html
+++ b/html/paginaUno.html
@@ -13,9 +13,7 @@
     <link rel="stylesheet" href="../css/noticias.css" />
   </head>
   <body>
-    <header class="text-center py-3 bg-dark text-white">
-      <h1>GamerVerse</h1>
-    </header>
+    <header class="text-center py-3 bg-dark text-white"></header>
 
     <!-- menú -->
     <nav>
